--- a/rock paper scissors/rockPaperScissors.html
+++ b/rock paper scissors/rockPaperScissors.html
@@ -25,11 +25,11 @@
         <div class="scoreBoard">
             <div class="score">
                 <p id="user-score">N</p>
-                <p>You</p>
+                <p id="Uplayer">You</p>
             </div>
             <div class="score">
                 <p id="comp-score">N</p>
-                <p>Computer</p>
+                <p id="Cplayer">Computer</p>
             </div>        
         </div>
         <div class="mssg-box">
